<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Product_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editIdFormProduct"
            android:layout_width="50dp"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/btnFormGet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_product_form_get" />

        <Button
            android:id="@+id/btnFormDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_product_form_delete" />

        <Button
            android:id="@+id/btnFormUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_product_form_update" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFormProduct"
            android:layout_width="350dp"
            android:layout_height="350dp"
            app:srcCompat="@drawable/empty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNameFormProduct"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_name_product_form" />

            <EditText
                android:id="@+id/editNameFormProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDescriptionFormProduct"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/text_description_product_form" />

            <EditText
                android:id="@+id/editDescriptionFormProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPriceFormProduct"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_price_product_form"
                android:textColor="@color/purple_200" />

            <EditText
                android:id="@+id/editPriceFormProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnFormProduct"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:ems="10"
                android:text="@string/btn_product_form_insert" />

            <Button
                android:id="@+id/btnFormBack"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/btn_product_back"
                android:ems="10"
                android:layout_marginLeft="5dp"
                app:icon="@android:drawable/ic_menu_revert" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
