<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageViewRegister"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/empty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textEmailRegister"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/text_Email_Register" />

        <EditText
            android:id="@+id/editEmailRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPasswordRegister"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/text_Password_Register" />

        <EditText
            android:id="@+id/editPasswordRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textConfirmRegister"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/text_Password_Confirm_Register" />

        <EditText
            android:id="@+id/editConfirmRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUpRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Sign_Up_Register" />

</LinearLayout>